# saia-eb-agent

./: .gitignore  README.md  out.md  pyproject.toml
config/: policy.example.yaml  settings.example.yaml
example/: .env.example  out.md
src/saia_eb_agent/: cli.py  config.py  models.py
src/saia_eb_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/saia_eb_agent/parsing/: easyconfig_text.py  filename.py
src/saia_eb_agent/policy/: detection.py  rules.py
src/saia_eb_agent/providers/: base.py  saia.py
src/saia_eb_agent/ranking/: engine.py
src/saia_eb_agent/reporting/: markdown.py
src/saia_eb_agent/repos/: barnard_ci.py  upstream_easybuild.py
src/saia_eb_agent/state/: __init__.py  store.py
src/saia_eb_agent/toolchains/: __init__.py  resolve.py
src/saia_eb_agent/utils/: git.py
src/saia_eb_agent/validation/: checks.py
src/saia_eb_agent/workflows/: agent.py  apply.py  prepare_mr.py  recommend.py  search.py
tests/: test_agent_workflow.py  test_apply_workflow.py  test_cli.py  test_easyconfig_text.py  test_filename.py  test_policy.py  test_ranking.py  test_search_workflow.py  test_state_store.py  test_toolchains.py  test_validation.py
